--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,9 @@ permalink: pretty
 sass:
   sass_dir: _sass
   style: :compressed
+exclude: ['Gemfile', 'Gemfile.lock','CNAME']
+
+# Plugin
+
+gems:
+  - jekyll-sitemap
